--- a/playease.html
+++ b/playease.html
@@ -6,8 +6,8 @@
 
     <meta charset="utf-8">
     <meta name="robots" content="index, follow" />
-    <meta name="keywords" content="playease.js,html5 flv player,html5 dash player,html5播放器,flv,fmp4,dash,rtmp,hls" />
-    <meta name="description" content="This is a HTML5 video player for FLV/fMP4 live streaming." />
+    <meta name="keywords" content="playease.js,html5 flv player,html5 fmp4 player,html5 dash player,html5播放器,flv,fmp4,dash,rtmp,hls" />
+    <meta name="description" content="This is a HTML5 FLV Player for FLV/fMP4/dash live streaming." />
     <meta name="author" content="Spencer Lau" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -128,7 +128,7 @@
                     <li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
                     <li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
                     <li>Added UI controls for <a href='playease.html'>playease.js</a> at version 1.0.08.<i> - Apr. 17, 2017</i></li>
-                    <li><a href='playease.html'>Playease.js</a>, an HTML5 media player for FLV live streaming, beta released.<i> - Feb. 10, 2017</i></li>
+                    <li><a href='playease.html'>Playease.js</a>, an HTML5 FLV Player for live streaming, beta released.<i> - Feb. 10, 2017</i></li>
                 </ul>
 
                 <h3>Documents</h3>
