--- a/solutions.html
+++ b/solutions.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="rtmpmate,playease.js,chatease.js,微信直播,弹幕直播" />
+	<meta name="keywords" content="playease.js,chatease.js,rtmpmate,微信直播,弹幕直播" />
 	<meta name="description" content="" />
 	<meta name="author" content="Spencer Lau" />
 
