--- a/playease.html
+++ b/playease.html
@@ -124,6 +124,22 @@
 
                 <h3>News</h3>
                 <ul class='u5 square'>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.69 - StreamWriter starts while the first keyframe is detected.<i> - Dec. 30, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.67 - Implemented Logger class. New interface[s]: getProperty.<i> - Dec. 29, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.59 - StreamSaver using ServiceWorke.<i> - Dec. 11, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.54 - New interface[s]: record.<i> - Dec. 4, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.50 - New interface[s]: create, destroy.<i> - Nov. 30, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.45 - New event for screenshot, and capture() will no longer auto download, but return the image data.<i> - Nov. 23, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.43 - Buffer before starting to play.<i> - Nov. 23, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.38 - Fix incorrect ui display when exiting fullscreen by pressing esc.<i> - Nov. 11, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.37 - Fix audio time issue.<i> - Nov. 10, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.36 - Optimize track data into interleaved mode.<i> - Nov. 9, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.33 - Ignore track depending on flv flags, to optimize audio only or video only streaming.<i> - Nov. 2, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.27 - Reduce latency by simply seeking.<i> - Oct. 27, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.20 - Capture the current frame, and save as a picture.<i> - Oct. 20, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.10 - Remove media segments within a specific time range to release memory usage.<i> - Oct. 16, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.1.07 - Carry api.id while dispatching events.<i> - Oct. 15, 2020</i></li>
+                    <li><a href='playease.html'>Playease.js</a> @ v2.0.89 - Synchronize video with audio while some frames are missing.<i> - Aug. 28, 2020</i></li>
                     <li>Start to build <a href='playease.html'>playease.js</a> v2 for business usage.<i> - Jun. 17, 2020</i></li>
                     <li>New feature of <a href='playease.html'>playease.js</a>: MPEG-DASH.<i> - Aug. 10, 2017</i></li>
                     <li>Introduced self-adaption display, and added flash render for MSIE 8, in <a href='playease.html'>playease.js</a> 1.0.33.<i> - Apr. 27, 2017</i></li>
