--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                 <div id='news'>
                     <h3>News</h3>
                     <ul class='u5 square'>
+                        <li><a href='playease.html'>Playease.js</a> @ v2.1.73 - New module[s]: FMP4.<i> - Jan. 15, 2021</i></li>
                         <li><a href='playease.html'>Playease.js</a> @ v2.1.69 - StreamWriter starts while the first keyframe is detected.<i> - Dec. 30, 2020</i></li>
                         <li><a href='playease.html'>Playease.js</a> @ v2.1.67 - Implemented Logger class. New interface[s]: getProperty.<i> - Dec. 29, 2020</i></li>
                         <li><a href='playease.html'>Playease.js</a> @ v2.1.59 - StreamSaver using ServiceWorke.<i> - Dec. 11, 2020</i></li>
