--- a/playease.html
+++ b/playease.html
@@ -105,7 +105,18 @@
                 </p>
 
                 <p>
-                    This is a HTML5 video player for modern live streaming. It supports HTTP/WS-FLV, HTTP/WS-fMP4, MPEG-DASH, HLS and Original HTML5 Media Resources (eg. Ogg, Mpeg4, WebM).
+                    This is not only an <a href='https://github.com/studease/playease#roadmap' target='_blank'>HTML5 FLV Player</a>,
+                    which supports HTTP/WS-FLV live streaming, but also supports HTTP/WS-fMP4, MPEG-DASH, HLS and Original HTML5 Media Resources (eg. Ogg, Mpeg4, WebM),
+                    with an independent UI framework.
+                </p>
+                <p>
+                    Note:<br />
+                    The open-sourced version (v1.2) is no longer being maintained. You can still find the source under branch "v1.2.xx".
+                    But it is outdated and not recommended to use in productions.<br />
+                    Instead, we've started a new version (v2) for business usage, which is much more professional, efficient and stable.
+                    In this build, an UI framework is developed separately from the core SDK (known as API), and is much easier to understand and extend.
+                    The UI framework is open-sourced since v2.1.49 to help building customized UI, plugins and components.<br />
+                    If you are interested in this player, please contact for details.
                 </p>
                 <div class='ol-status' style='width: 100%; max-width: 640px;'>
                     <label>Online: </label>
